--- a/modules/activiti-admin/pom.xml
+++ b/modules/activiti-admin/pom.xml
@@ -354,6 +354,27 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <!--		<dependency>-->
+        <!--			<groupId>javax.activation</groupId>-->
+        <!--			<artifactId>activation</artifactId>-->
+        <!--			<version>1.1.1</version>-->
+        <!--		</dependency>-->
 	</dependencies>
 
 	<!-- BUILD -->
