--- a/modules/activiti-ui/activiti-app/pom.xml
+++ b/modules/activiti-ui/activiti-app/pom.xml
@@ -12,7 +12,7 @@
     <packaging>war</packaging>
 
     <dependencies>
-    
+
     	<dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-app-conf</artifactId>
@@ -27,6 +27,26 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <!--		<dependency>-->
+        <!--			<groupId>javax.activation</groupId>-->
+        <!--			<artifactId>activation</artifactId>-->
+        <!--			<version>1.1.1</version>-->
+        <!--		</dependency>-->
     </dependencies>
 
     <!-- BUILD -->
@@ -94,7 +114,7 @@
         <pluginManagement>
             <plugins>
 
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven 
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven
                     build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
