--- a/modules/activiti-webapp-rest2/pom.xml
+++ b/modules/activiti-webapp-rest2/pom.xml
@@ -12,14 +12,14 @@
     <relativePath>../..</relativePath>
     <version>6.0.0</version>
   </parent>
-  
+
   <!-- swagger config -->
    <properties>
     <swagger.host>localhost:8080</swagger.host>
     <swagger.generated.directory>target/generated-swagger</swagger.generated.directory>
   </properties>
   <!-- swagger config end-->
-  
+
   <build>
     <plugins>
       <plugin>
@@ -112,8 +112,8 @@
 		  </plugins>
 	  </build>
     </profile>
-    
-    
+
+
     <!-- swagger profile config -->
     <profile>
       <id>swagger</id>
@@ -160,7 +160,7 @@
                   <swaggerFileName>activiti</swaggerFileName>
                   <swaggerDirectory>${basedir}/src/main/webapp/docs</swaggerDirectory>
                 </apiSource>
-                
+
               </apiSources>
             </configuration>
             <executions>
@@ -176,9 +176,9 @@
       </build>
     </profile>
     <!-- swagger profile config end-->
-    
+
   </profiles>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.activiti</groupId>
@@ -215,5 +215,26 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <!--		<dependency>-->
+    <!--			<groupId>javax.activation</groupId>-->
+    <!--			<artifactId>activation</artifactId>-->
+    <!--			<version>1.1.1</version>-->
+    <!--		</dependency>-->
   </dependencies>
 </project>
