--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 jobs:
 
   pre-commit:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
         uses: pre-commit/action@v2.0.0
 
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     needs: pre-commit
     steps:
 
@@ -72,10 +72,7 @@ jobs:
       - name: Bump version with jx-release-version
         if: ${{ github.event_name == 'push' }}
         run: |
-          git fetch --tags
-          jx-release-version -next-version semantic --debug
-          jx-release-version -next-version increment --debug
-          jx-release-version --debug
+          git fetch --tags -q
           echo $(jx-release-version) > VERSION
 
       - name: Set preview version
